--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-element-admin",
+  "name": "vue-element-template",
   "version": "0.0.0",
   "private": true,
   "type": "module",
